Bug 432671 - Ctrl+scroll zooming does not work with slow touchpad scroll speed
Summary: Ctrl+scroll zooming does not work with slow touchpad scroll speed
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-09 00:03 UTC by Bernhard
Modified: 2023-02-11 03:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard 2021-02-09 00:03:12 UTC
SUMMARY
Zooming by CTRL+scrolling on a touchpad with granular scrolling only works if you do it so fast you have almost no control over the outcome.

STEPS TO REPRODUCE
1. Have a touchpad with high resolution scrolling support (scroll delta < 120)
2. hold control key and scroll in any directory in dolphin
3. it does not respond at all when scrolling slowly, no matter how far you try to go.

OBSERVED RESULT
When scrolling slowly it completely ignores that, no matter how far you 'scroll'. It only responds if you go so fast you're not able to stop at the zoom level you want. 

EXPECTED RESULT
Zooming should work like everywhere else, eg firefox.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2
Kernel Version: 5.10.14-arch1-1
OS Type: 64-bit
Processors: 8 × AMD Ryzen 7 4700U with Radeon Graphics
Memory: 15.1 GiB of RAM
Graphics Processor: AMD RENOIR

ADDITIONAL INFORMATION
Scrolling normally works find and is high res.
Comment 1 Nate Graham 2021-02-09 17:29:43 UTC
Confirmed.
Comment 2 Bug Janitor Service 2023-02-06 13:21:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/503
Comment 3 Méven Car 2023-02-09 16:43:56 UTC
Git commit b168f9a98bbe00643e15a49075ed80ac6c82fa74 by Méven Car, on behalf of Friso Smit.
Committed on 09/02/2023 at 16:28.
Pushed by meven into branch 'master'.

Fix zooming for high resolution scroll wheels

M  +14   -3    src/views/dolphinview.cpp
M  +4    -0    src/views/dolphinview.h

https://invent.kde.org/system/dolphin/commit/b168f9a98bbe00643e15a49075ed80ac6c82fa74