Fix zooming for high resolution scroll wheels

BUG: 432671